ProjectHealthScore/main/default/objects/Activity/Activity.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Interaction_Rating__c</fullName>
        <type>Number</type>
        <label>Interaction Rating</label>
        <precision>3</precision>
        <scale>0</scale>
    </fields>
</CustomObject>