ProjectHealthScore/main/default/objects/Activity/fields/Associated_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account_Name__c</fullName>
    <label>Associated Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>