ProjectHealthScore/main/default/objects/Activity/fields/Interaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Rating__c</fullName>
    <label>Interaction Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>