ProjectHealthScore/main/default/objects/Activity/fields/Software_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Software_Discussed__c</fullName>
    <label>Software Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AutoCAD</fullName>
            </value>
            <value>
                <fullName>Revit</fullName>
            </value>
            <value>
                <fullName>Fusion 360</fullName>
            </value>
            <value>
                <fullName>3ds Max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>